<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PlayerActivity">



    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/view_exoPlayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:controller_layout_id="@layout/custom_control_view"
        android:keepScreenOn="true"
        >

    </com.google.android.exoplayer2.ui.PlayerView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/view_topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000"
        >
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_back_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:tint="@color/white"
            >

        </ImageButton>
        <TextView
            android:id="@+id/view_videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee">
        </TextView>
        <ImageButton

            android:id="@+id/moreFeatureBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_menu_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            app:tint="@color/white"
            android:layout_marginEnd="50dp"
            android:padding="10dp"
            >

        </ImageButton>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <ImageButton
        android:id="@+id/lockBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_lock_open_icon"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock"
        app:layout_constraintEnd_toEndOf="@id/view_topController"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white">

    </ImageButton>



    <ImageButton
        android:id= "@+id/playPauseBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_play_arrow_icon"
        android:contentDescription="@string/play_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:background="?actionBarItemBackground"
        app:tint="@color/white">

    </ImageButton>






    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/view_bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#42000000"
        android:gravity="end|bottom"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/exo_controls_repeat_off"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            app:tint="@color/white">
        </ImageButton>
        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_previous_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/prev_btn"
            app:tint="@color/white"
            android:padding="10dp"
            >

        </ImageButton>


        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_next_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/next_btn"
            app:tint="@color/white">
        </ImageButton>

        <ImageButton
            android:id="@+id/fullScreenBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_fullscreen_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/fullscreen_btn"
            app:tint="@color/white"
            >

        </ImageButton>






    </androidx.appcompat.widget.LinearLayoutCompat>





</androidx.constraintlayout.widget.ConstraintLayout>